Weaken VM options slightly to export only